--- a/project-1/index.html
+++ b/project-1/index.html
@@ -2,10 +2,90 @@
 <html>
 
 <head>
-<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Report a Beached Turtle</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
+
+<body class="grey-text text-darken-3 grey lighten-4">
+
+	<!-- NAVBAR -->
+	<nav id="navbar" class="nav-extended green lighten-1">
+	<div class="nav-wrapper">
+		<a href="#" class="brand-logo"><img id="logo" src="assets/images/turtlehero-logo.png" alt="turtlehero Logo"></a>
+		<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+		<ul id="nav-mobile" class="right hide-on-med-and-down">
+			<li><a href="#">Instructions</a></li>
+			<li><a href="#">After Reporting</a></li>
+			<li><a href="#">Turtle Rescue League</a></li>
+		</ul>
+		<ul class="side-nav" id="mobile-demo">
+			<li><a href="#">Instructions</a></li>
+			<li><a href="#">After Reporting</a></li>
+			<li><a href="#">Turtle Rescue League</a></li>
+		</ul>
+	</div>
+	<div class="nav-content">
+		<ul class="tabs tabs-transparent">
+			<li class="tab"><a href="#tab1">Reported</a></li>
+			<li class="tab"><a class="active" href="#tab2">Rescuing</a></li>
+			<li class="tab"><a href="#tab3">Rescued</a></li>
+		</ul>
+	</div>
+</nav>
+<div id="tab1" class="col s12"></div>
+<div id="tab2" class="col s12"></div>
+<div id="tab3" class="col s12"></div>
+
+	<!-- MAIN SECTOIN-->
+	<main>
+
+		<!-- MAIN ROW -->
+		<div class="row" id="main-row">
+			<div class="container">
+
+				<!--TURTLE CARD-->
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<p>This is a turtle information card</p>
+							<p>Turtle information goes here.</p>
+						</div>
+					</div>
+				</div>
+
+				<!-- FIXED ACTION BUTTON -->
+				<div id="add-button" class="fixed-action-btn horizontal click-to-toggle">
+					<a class="btn-floating waves-effect waves-light pulse btn-large green lighten-1 modal-trigger" href="#modal">
+              <i class="material-icons">sms_failed</i>
+          </a>
+				</div>
+
+			</div>
+		</div>
+
+	</main>
+
+	<!-- FOOTER -->
+	<footer class="page-footer brown lighten-1 grey-text text-lighten-4">
+		<div class="container">
+			<div class="col sm12 center-align">
+				© 2017 Turtle Power
+			</div>
+			<br>
+		</div>
+	</footer>
+
+	<!-- JAVASCRIPT -->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+	<script type="text/javascript" src="assets/javascript/scripts.js"></script>
 
 </body>
+
 </html>
