Adds link in navbar to main Report Turtle page.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -18,14 +18,20 @@
 		<a href="#" class="brand-logo"><img id="logo" src="assets/images/turtlehero-logo.png" alt="turtlehero Logo"></a>
 		<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		<ul id="nav-mobile" class="right hide-on-med-and-down">
-			<li><a href="#">Instructions</a></li>
+			<li><a href="#">Report Turtle</a></li>
 			<li><a href="#">After Reporting</a></li>
+			<li><a href="#">Help</a></li>
 			<li><a href="#">Turtle Rescue League</a></li>
 		</ul>
 		<ul class="side-nav" id="mobile-demo">
-			<li><a href="#">Instructions</a></li>
-			<li><a href="#">After Reporting</a></li>
+			<li><a href="#"><h5>Report Turtle</h5></a></li>
+			<li><a href="#"><h5>After Reporting</h5></a></li>
+			<div class="divider">
+			</div>
+			<li><a href="#">Help</a></li>
 			<li><a href="#">Turtle Rescue League</a></li>
+			<div class="divider">
+			</div>
 		</ul>
 	</div>
 	<div class="nav-content">
@@ -47,7 +53,16 @@
 		<div class="row" id="main-row">
 			<div class="container">
 
-				<!--TURTLE CARD-->
+				<!--TURTLE CARDS-->
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<p>This is a turtle information card</p>
+							<p>Turtle information goes here.</p>
+						</div>
+					</div>
+				</div>
+
 				<div class="col s12 m6">
 					<div class="card">
 						<div class="card-image">
@@ -70,7 +85,7 @@
 	</main>
 
 	<!-- FOOTER -->
-	<footer class="page-footer brown lighten-1 grey-text text-lighten-4">
+	<footer class="page-footer brown darken-1 grey-text text-lighten-4">
 		<div class="container">
 			<div class="col sm12 center-align">
 				© 2017 Turtle Power
