--- a/project-1/index.html
+++ b/project-1/index.html
@@ -21,15 +21,15 @@
 			<li><a href="#">Report Turtle</a></li>
 			<li><a href="#">After Reporting</a></li>
 			<li><a href="#">Help</a></li>
-			<li><a href="#">Turtle Rescue League</a></li>
+			<li><a href="http://www.turtlerescueleague.com" target="blank">Turtle Rescue League</a></li>
 		</ul>
 		<ul class="side-nav" id="mobile-demo">
-			<li><a href="#"><h5>Report Turtle</h5></a></li>
-			<li><a href="#"><h5>After Reporting</h5></a></li>
+			<li><a href="#">Report Turtle</a></li>
+			<li><a href="#">After Reporting</a></li>
 			<div class="divider">
 			</div>
 			<li><a href="#">Help</a></li>
-			<li><a href="#">Turtle Rescue League</a></li>
+			<li><a href="http://www.turtlerescueleague.com" target="blank">Turtle Rescue League</a></li>
 			<div class="divider">
 			</div>
 		</ul>
