--- a/project-1/index.html
+++ b/project-1/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/styles.css">
+	<script></script>
 </head>
 
 <body class="grey-text text-darken-3 grey lighten-4">
@@ -66,7 +67,7 @@
 
 			</div>
 		</div>
-
+		<div id="map" class='col s12'></div>
 	</main>
 
 	<!-- FOOTER -->
@@ -84,7 +85,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+	<script async defer src= "https://maps.googleapis.com/maps/api/js?key=AIzaSyA4PbxtjFAOdO90WsLjM_SXs_sfUEb7OM0&callback=initMap"></script>
 	<script type="text/javascript" src="assets/javascript/scripts.js"></script>
+	
 
 </body>
 
