--- a/project-1/index.html
+++ b/project-1/index.html
@@ -17,14 +17,14 @@
 	<nav id="navbar" class="nav-extended green lighten-1">
 		<div class="nav-wrapper">
 			<a href="index.html" class="brand-logo"><img id="logo" src="assets/images/turtlehero-logo.png" alt="turtlehero Logo"></a>
-			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-			<ul id="nav-mobile" class="right hide-on-med-and-down">
+			<a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
+			<ul id="nav-top" class="right hide-on-med-and-down">
 				<li><a href="index.html">Report Turtle</a></li>
 				<li><a href="#">After Reporting</a></li>
 				<li><a href="#">Help</a></li>
 				<li><a href="http://www.turtlerescueleague.com" target="blank">Turtle Rescue League</a></li>
 			</ul>
-			<ul class="side-nav" id="mobile-demo">
+			<ul class="side-nav" id="mobile-nav">
 				<li><a href="index.html">Report Turtle</a></li>
 				<li><a href="#">After Reporting</a></li>
 				<div class="divider">
@@ -56,7 +56,7 @@
 					<div class="col s12 m6">
 
 					<!--TURTLE CARDS-->
-						<div class="card">
+						<div class="card hoverable">
 					    <div class="card-image waves-effect waves-block waves-light">
 					      <img class="activator" src="assets/images/turtle.jpg">
 					    </div>
@@ -72,7 +72,7 @@
 					</div>
 
 					<div class="col s12 m6">
-						<div class="card">
+						<div class="card hoverable">
 							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" src="assets/images/turtle.jpg">
 							</div>
