--- a/project-1/index.html
+++ b/project-1/index.html
@@ -94,6 +94,20 @@
 		<!-- RESCUING TAB -->
 		<div id="tab2" class="col s12"></div>
 			<!-- Begin code here -->
+			<div class="card hoverable">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img class="activator" src="assets/images/turtle.jpg">
+				</div>
+				<div class="card-content">
+					<span class="card-title activator green-text text-lighten-1">Turtle 11<i class="material-icons right">more_vert</i></span>
+					<p>Reported Sunday, Aug. 9</p>
+				</div>
+				<div class="card-reveal">
+					<span class="card-title green-text text-lighten-1">Location<i class="material-icons right">close</i></span>
+					<p>Here is some more information about the location of this reported turtle that is revealed once clicked on.</p>
+				</div>
+			</div>
+		</div>
 
 		<!-- RESCUED TAB -->
 		<div id="tab3" class="col s12"></div>
@@ -130,7 +144,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 	<script async defer src= "https://maps.googleapis.com/maps/api/js?key=AIzaSyA4PbxtjFAOdO90WsLjM_SXs_sfUEb7OM0&callback=initMap"></script>
 	<script type="text/javascript" src="assets/javascript/scripts.js"></script>
-	
+
 
 </body>
 
