Fixes turtle map.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -58,35 +58,34 @@
 
 					<!--TURTLE CARDS-->
 						<div class="card hoverable">
-					    <div class="card-image waves-effect waves-block waves-light">
+					    <div class="card-image">
 					     <div id="map" class='col s12'></div>
 					    </div>
 					    <div class="card-content">
 					      <span class="card-title activator green-text text-lighten-1">Turtle 12<i class="material-icons right">more_vert</i></span>
-					      <p>Reported Monday, Aug. 10</p>
+					      <p>Reported Monday, Aug. 10 at 2:30 PM</p>
 					    </div>
 					    <div class="card-reveal">
 					      <span class="card-title green-text text-lighten-1">Location<i class="material-icons right">close</i></span>
 					      <p>Here is some more information about the location of this reported turtle that is revealed once clicked on.</p>
-
 					    </div>
 					  </div>
 					</div>
 
 					<div class="col s12 m6">
 						<div class="card hoverable">
-							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" src="assets/images/turtle.jpg">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator green-text text-lighten-1">Turtle 13<i class="material-icons right">more_vert</i></span>
-								<p>Reported Tuesday, Aug. 11</p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title green-text text-lighten-1">Location<i class="material-icons right">close</i></span>
-								<p>Here is some more information about the location of this reported turtle that is revealed once clicked on.</p>
-							</div>
-						</div>
+					    <div class="card-image">
+					     <div id="map" class='col s12'></div>
+					    </div>
+					    <div class="card-content">
+					      <span class="card-title activator green-text text-lighten-1">Turtle 13<i class="material-icons right">more_vert</i></span>
+					      <p>Reported Monday, Aug. 10 at 3:30 PM</p>
+					    </div>
+					    <div class="card-reveal">
+					      <span class="card-title green-text text-lighten-1">Location<i class="material-icons right">close</i></span>
+					      <p>Here is some more information about the location of this reported turtle that is revealed once clicked on.</p>
+					    </div>
+					  </div>
 					</div>
 
 				</div>
