--- a/project-1/form.html
+++ b/project-1/form.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title></title>
+  <title></title>
 </head>
+
 <body>
 
 
-<!-- Form that will send latitude and longitude, image(?), landmarks, volunteer name, call back phone number. Latitude and longitude will be hidden fields. landmarks, user email and call back number are optional user input. -->
-<form action="https://formspree.io/umassturtlepower@gmail.com"
-      method="POST">
+  <!-- Form that will send latitude and longitude, landmarks, volunteer name, and call back phone number. Latitude and longitude will be hidden fields. Landmarks, volunteer email and call back number are optional fields. -->
+  <form action="https://formspree.io/umassturtlepower@gmail.com" method="POST">
     <input type="hidden" name="_subject" value="I found a turtle!">
     <input type="hidden" name="latitude" value="latitude" id="latitude-input">
     <input type="hidden" name="longitude" value="longitude" id="longitude-input">
@@ -28,7 +29,8 @@
     <input type="email" name="emailFrom" placeholder="spotter@volunteer.com" id="email-input"><br>
 
     <input type="submit" value="Send" id="turtle-btn">
-</form>
+  </form>
 
 </body>
+
 </html>
