Adds dial-out function (with dummy number).

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -180,7 +180,7 @@
 
 			<div class="modal-footer">
 				<a href="#!" class="modal-action waves-effect waves-black btn-flat modal-close">Cancel</a>
-				<button id="call" class="btn green yellow-text waves-effect waves-light modal-close" type="call" name="action">Call</button>
+				<a href="tel:+16032255191"><button id="call" class="btn green yellow-text waves-effect waves-light modal-close">CALL</button></a>
 			</div>
 		</div>
 
@@ -193,7 +193,7 @@
 
 			<div class="modal-footer">
 				<a href="#!" class="modal-action waves-effect waves-black btn-flat modal-close">Cancel</a>
-				<button id="mark" class="btn green yellow-text waves-effect waves-light modal-close" type="mark" name="action">Mark</button>
+				<button id="mark" class="btn green yellow-text waves-effect waves-light modal-close">Mark</button>
 			</div>
 		</div>
 
