Adds names to all input fields.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -134,17 +134,17 @@
 							<div class="row">
 								<!-- Name Input-->
 								<div class="input-field col s12 m4">
-									<input id="name-input" type="text" class="validate" maxlength="30">
+									<input id="name-input" name="name" type="text" class="validate" maxlength="30">
 									<label for="name">Name</label>
 								</div>
 								<!-- Phone Number Input-->
 								<div class="input-field col s12 m4">
-									<input id="phoneNumber-input" type="tel" class="validate">
+									<input id="phoneNumber-input" name="phone" type="tel" class="validate">
 									<label for="callBackNumber">Phone Number</label>
 								</div>
 								<!-- Email Input-->
 								<div class="input-field col s12 m4">
-									<input id="email-input" type="email" class="validate">
+									<input id="email-input" name="email" type="email" class="validate">
 									<label for="email">Email</label>
 								</div>
 
@@ -153,7 +153,7 @@
 							<!-- Input Row 2 -->
 							<div class="input-field col s12">
 								<!-- Landmarks Input -->
-								<input id="landmarks-input" type="text" class="validate" maxlength="150" placeholder="Please note nearby landmarks.">
+								<input id="landmarks-input" name="landmarks" type="text" class="validate" maxlength="150" placeholder="Please note nearby landmarks.">
 								<label for="landmarks">Location</label>
 
 							</div>
