Adds text informing user location will be reported upon form submit.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -155,6 +155,7 @@
 								<!-- Landmarks Input -->
 								<input id="landmarks-input" name="landmarks" type="text" class="validate" maxlength="150" placeholder="Please note nearby landmarks.">
 								<label for="landmarks">Location</label>
+								<p>Your coordinates will also be sent to the Rescue Center. Pleasue ensure you are near the turtle.</p>
 
 							</div>
 
