--- a/project-1/after-reporting.html
+++ b/project-1/after-reporting.html
@@ -17,13 +17,13 @@
 				<a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-top" class="right hide-on-med-and-down">
 					<li><a href="index.html">Report Turtle</a></li>
-					<li><a href="#">After Reporting</a></li>
+					<li><a href="after-reporting.html">After Reporting</a></li>
 					<li><a href="#">Help</a></li>
 					<li><a href="http://www.turtlerescueleague.com" target="blank">Turtle Rescue League</a></li>
 				</ul>
 				<ul class="side-nav" id="mobile-nav">
 					<li><a href="index.html">Report Turtle</a></li>
-					<li><a href="#">After Reporting</a></li>
+					<li><a href="after-reporting.html">After Reporting</a></li>
 					<div class="divider">
 					</div>
 					<li><a href="#" class="small-link"><i class="material-icons">help</i>Help</a></li>
