--- a/project-1/index.html
+++ b/project-1/index.html
@@ -21,7 +21,7 @@
 			<a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
 			<ul id="nav-top" class="right hide-on-med-and-down">
 				<li><a href="index.html">REPORT TURTLE</a></li>
-				<li><a href="#">AFTER REPORTING</a></li>
+				<li><a href="index3.html">AFTER REPORTING</a></li>
 				<li><a href="#">HELP</a></li>
 				<li><a href="http://www.turtlerescueleague.com/about" target="blank">ABOUT</a></li>
 			</ul>
