Fixes accidental deletions.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -66,8 +66,8 @@
 					      <p>Reported Monday, Aug. 10 at 2:30 PM</p>
 					    </div>
 					    <div class="card-reveal">
-					      <span class="card-title green-text">Location<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about the location of this reported turtle that is revealed once clicked on.</p>
+					      <span class="card-title green-text">Comments<i class="material-icons right">close</i></span>
+					      <p>Here is some more information about this reported turtle that is revealed once clicked on.</p>
 					    </div>
 					  </div>
 					</div>
@@ -82,8 +82,8 @@
 					      <p>Reported Monday, Aug. 10 at 3:30 PM</p>
 					    </div>
 					    <div class="card-reveal">
-					      <span class="card-title green-text">Location<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about the location of this reported turtle that is revealed once clicked on.</p>
+					      <span class="card-title green-text">Comments<i class="material-icons right">close</i></span>
+					      <p>Here is some more information about this reported turtle that is revealed once clicked on.</p>
 					    </div>
 					  </div>
 					</div>
@@ -150,9 +150,9 @@
 
 							<!-- Input Row 2 -->
 							<div class="input-field col s12">
-								<!-- Landmarks Input -->
-								<input id="landmarks-input" name="landmarks" type="text" class="validate" maxlength="150" placeholder="Please note nearby landmarks.">
-								<label for="landmarks">Location</label>
+								<!-- Comment Input -->
+								<input id="comment-input" name="comment" type="text" class="validate" maxlength="150" placeholder="Please note nearby landmarks.">
+								<label for="comment">Comment</label>
 								<p>Your coordinates will also be sent to the Rescue Center. Pleasue ensure you are near the turtle.</p>
 
 							</div>
