--- a/project-1/index.html
+++ b/project-1/index.html
@@ -39,8 +39,8 @@
 		<div class="nav-content">
 			<ul id="tabs" class="tabs tabs-transparent">
 				<li class="tab"><a class="active" href="#tab1">Reported</a></li>
-				<li class="tab"><a href="#tab2">Rescuing</a></li>
-				<li class="tab"><a href="#tab3">Rescued</a></li>
+				<li class="tab"><a href="#tab2">Dispatched</a></li>
+				<li class="tab"><a href="#tab3">Saved</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -92,11 +92,11 @@
 			</div>
 		</div>
 
-		<!-- RESCUING TAB -->
+		<!-- DISPATCHED TAB -->
 		<div id="tab2" class="col s12"></div>
 			<!-- Begin code here -->
 
-		<!-- RESCUED TAB -->
+		<!-- SAVED TAB -->
 		<div id="tab3" class="col s12"></div>
 			<!-- Begin code here -->
 
