Changes rescued to saved. Replaces swimming-turtle.img.

--- a/project-1/patrol-instructions.html
+++ b/project-1/patrol-instructions.html
@@ -37,14 +37,14 @@
 	</nav>
 
 	<!-- MAIN -->
-	
+
 	<div class="parallax-container">
-		<div class="parallax"><img src="assets/images/beached-turtle2.jpg" style="display: block"></div>
+		<div class="parallax"><img src="assets/images/swimming-turtle.jpg" style="display: block;"></div>
 	</div>
 
 	<div class="section grey lighten-4">
 		<div class="row container">
-			<h2 class="header green-text">Instructions for Volunteers</h2>
+			<h3 class="green-text">Patrol Instructions</h3>
 			<p class="brown-text text-darken-3">When you are on patrol, keep your eyes on the water line. As the tide is cresting, you are going to see the stranded turtle in the surf. If you see a Sea Turtle, here is what you do:</p>
 			<ol class="brown-text text-darken-3">
 				<li>Move the turtle above the high tide line, DO NOT PUT IT BACK INTO THE WATER or REMOVE IT FROM THE BEACH</li>
@@ -53,10 +53,6 @@
 				<li>Either submit your location through this site, or call Mass Audubon's Wellfleet Bay Wildlife Sanctuary Sea Turtle Hot Line at 508-349-2615 ext. 104 and leave exact location (GPS coordinates if possible) as well as distinguishable landmarks; a rescue crew will be promptly dispatched to the location.</li>
 			</ol>
 		</div>
-	</div>
-
-	<div class="parallax-container">
-		<div class="parallax"><img src="assets/images/swimming-turtle.jpg" style="display: block"></div>
 	</div>
 
 	<!-- FOOTER -->
