moment.js added, some functionality with the turtle div

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -58,21 +58,21 @@
 
 					<!--TURTLE CARDS-->
 						<div class="card hoverable">
-					    <div class="card-image">
+					   <div class="card-image">
 					     <div id="map" class="col s12"></div>
 					    </div>
 					    <div class="card-content">
-					      <span class="card-title activator green-text">Turtle 12<i class="material-icons right">more_vert</i></span>
-					      <p>Reported Monday, Aug. 10 at 2:30 PM</p>
+					      <span class="card-title activator green-text">Turtle<p id="number"></p><i class="material-icons right">more_vert</i></span>
+					      <p id="reported"><!-- Reported Monday, Aug. 10 at 2:30 PM --></p>
 					    </div>
 					    <div class="card-reveal">
 					      <span class="card-title green-text">Comments<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about this reported turtle that is revealed once clicked on.</p>
+					      <p id="comments"><!-- Here is some more information about this reported turtle that is revealed once clicked on. --></p>
 					    </div>
 					  </div>
 					</div>
 
-					<div class="col s12 m6">
+				<!-- 	<div class="col s12 m6">
 						<div class="card hoverable">
 					    <div class="card-image">
 					     <div id="map" class='col s12'></div>
@@ -86,7 +86,7 @@
 					      <p>Here is some more information about this reported turtle that is revealed once clicked on.</p>
 					    </div>
 					  </div>
-					</div>
+					</div> -->
 
 				</div>
 			</div>
