--- a/project-1/index.html
+++ b/project-1/index.html
@@ -62,7 +62,7 @@
 					     <div id="map" class="col s12"></div>
 					    </div>
 					    <div class="card-content">
-					      <span class="card-title activator green-text">Turtle<p id="number"></p><i class="material-icons right">more_vert</i></span>
+					      <span id="number" class="card-title activator green-text"><i class="material-icons right">more_vert</i></span>
 					      <p id="reported"><!-- Reported Monday, Aug. 10 at 2:30 PM --></p>
 					    </div>
 					    <div class="card-reveal">
