Adds info text when no cards present.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -49,56 +49,39 @@
 	<main>
 
 		<!-- REPORTED TAB -->
-		<div id="tab1" class="col s12">
+		<div id="tab1" class="row container center-align tab">
+			<h5 class="grey-text no-card">No Turtles Reported</h5>
 
-			<!-- MAIN ROW -->
-			<div class="row" id="main-row">
-				<div class="container">
-					<div class="col s12 m6">
 
-					<!--TURTLE CARDS-->
-						<div class="card hoverable">
-					   <div class="card-image">
-					     <div id="map" class="col s12"></div>
-					    </div>
-					    <div class="card-content">
-					      <span id="number" class="card-title activator green-text"><i class="material-icons right">more_vert</i></span>
-					      <p id="reported"><!-- Reported Monday, Aug. 10 at 2:30 PM --></p>
-					    </div>
-					    <div class="card-reveal">
-					      <span class="card-title green-text">Comments<i class="material-icons right">close</i></span>
-					      <p id="comments"><!-- Here is some more information about this reported turtle that is revealed once clicked on. --></p>
-					    </div>
-					  </div>
-					</div>
 
-				<!-- 	<div class="col s12 m6">
-						<div class="card hoverable">
-					    <div class="card-image">
-					     <div id="map" class='col s12'></div>
-					    </div>
-					    <div class="card-content">
-					      <span class="card-title activator green-text">Turtle 13<i class="material-icons right">more_vert</i></span>
-					      <p>Reported Monday, Aug. 10 at 3:30 PM</p>
-					    </div>
-					    <div class="card-reveal">
-					      <span class="card-title green-text">Comments<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about this reported turtle that is revealed once clicked on.</p>
-					    </div>
-					  </div>
-					</div> -->
+			<!--TURTLE CARD-->
+			<!-- <div class="col s12 m6">
+				<div class="card hoverable">
+			   <div class="card-image">
+			     <div id="map" class="col s12"></div>
+			    </div>
+			    <div class="card-content">
+			      <span id="number" class="card-title activator green-text"><i class="material-icons right">more_vert</i></span>
+			      <p id="reported"></p>
+			    </div>
+			    <div class="card-reveal">
+			      <span class="card-title green-text">Comment<i class="material-icons right">close</i></span>
+			      <p id="comment"></p>
+			    </div>
+			  </div>
+			</div> -->
 
-				</div>
-			</div>
 		</div>
 
 		<!-- DISPATCHED TAB -->
-		<div id="tab2" class="col s12"></div>
-			<!-- Begin code here -->
+		<div id="tab2" class="row container center-align tab">
+			<h5 class="grey-text no-card">No Rescuers Dispatched</h5>
+		</div>
 
 		<!-- SAVED TAB -->
-		<div id="tab3" class="col s12"></div>
-			<!-- Begin code here -->
+		<div id="tab3" class="row container center-align tab">
+			<h5 class="grey-text no-card">No Turtles Saved</h5>
+		</div>
 
 		<!-- FLOATING BUTTONS -->
 		<div id="report-button" class="fixed-action-btn hover-to-toggle">
