Work in progress on card html.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -46,10 +46,11 @@
 	</nav>
 
 	<!-- MAIN SECTOIN -->
-	<main>
+	<main class="row">
 
 		<!-- REPORTED TAB -->
-		<div id="tab1" class="row container center-align tab">
+		<div id="tab1" class="center-align">
+
 			<h5 class="grey-text no-card">No Turtles Reported</h5>
 
 
@@ -71,15 +72,30 @@
 			  </div>
 			</div> -->
 
+			<!-- New Card (Work in Progress)-->
+			<!-- <div class="card col s12 m6">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img class="activator" src="assets/images/swimming-turtle.jpg">
+				</div>
+				<div class="card-content">
+					<span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+					<p><a href="#">This is a link</a></p>
+				</div>
+				<div class="card-reveal">
+					<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+					<p>Here is some more information about this product that is only revealed once clicked on.</p>
+				</div>
+			</div> -->
+
 		</div>
 
 		<!-- DISPATCHED TAB -->
-		<div id="tab2" class="row container center-align tab">
+		<div id="tab2" class="center-align">
 			<h5 class="grey-text no-card">No Rescuers Dispatched</h5>
 		</div>
 
 		<!-- SAVED TAB -->
-		<div id="tab3" class="row container center-align tab">
+		<div id="tab3" class="center-align">
 			<h5 class="grey-text no-card">No Turtles Saved</h5>
 		</div>
 
