--- a/project-1/patrol-instructions.html
+++ b/project-1/patrol-instructions.html
@@ -45,8 +45,8 @@
 	<div class="section grey lighten-4">
 
 		<div class="row container">
-			<h3 class="green-text center-align">Patrol Instructions</h3>
-			<p class="brown-text text-darken-2">Keep your eyes on the water line when you are on patrol. You will see stranded sea turtles in the surf as the tide is cresting. Perform the following actions when you spot a beached turtle:</p>
+			<h4 id="steps-header" class="green-text center-align">Patrol Instructions</h4>
+			<p class="brown-text text-darken-2">Keep your eyes on the water line when you are on patrol, and you will see stranded sea turtles in the surf as the tide is cresting. Do the following when you spot a beached turtle:</p>
 		</div>
 
 		<div id="steps" class="row container grey-text text-darken-2 center-align">
