create div, still need to get static map

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -51,13 +51,13 @@
 		<!-- REPORTED TAB -->
 		<div id="tab1" class="center-align">
 
-			<h5 class="grey-text no-card">No Turtles Reported</h5>
+			<h5 id="heading" class="grey-text no-card show">No Turtles Reported</h5>
 
 
 
 			<!--TURTLE CARD-->
-			<!-- <div class="col s12 m6">
-				<div class="card hoverable">
+			<div id="fullCard" class="col s12">
+				<div id="turtle" class="card hoverable hide">
 			   <div class="card-image">
 			     <div id="map" class="col s12"></div>
 			    </div>
@@ -70,7 +70,8 @@
 			      <p id="comment"></p>
 			    </div>
 			  </div>
-			</div> -->
+			</div>
+			</div>
 
 			<!-- New Card (Work in Progress)-->
 			<!-- <div class="card col s12 m6">
