Removes turtle card center-align title, and fixes clone to tab1 only.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -56,7 +56,7 @@
 
 
 			<!--TURTLE CARD-->
-			<div id="fullCard" class="col s12">
+			<div id="fullCard" class="col s12 m6">
 				<div id="turtle" class="card hoverable hide">
 			   <div class="card-image">
 			     <div id="map" class="col s12"></div>
