Fixes turtle card order.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -48,12 +48,9 @@
 	<!-- MAIN SECTOIN -->
 	<main class="row">
 
-		<!-- REPORTED TAB -->
-		<div id="tab1" class="center-align">
-
-			<h5 id="heading" class="grey-text no-card show">No Turtles Reported</h5>
-
-
+		<!-- TAB1: REPORTED -->
+		<div id="tab1">
+			<h5 id="heading" class="grey-text no-card show center-align">No Turtles Reported</h5>
 
 			<!--TURTLE CARD-->
 			<div id="fullCard" class="col s12 m6">
@@ -90,17 +87,17 @@
 
 		</div>
 
-		<!-- DISPATCHED TAB -->
-		<div id="tab2" class="center-align">
-			<h5 class="grey-text no-card">No Rescuers Dispatched</h5>
+		<!-- TAB2: DISPATCHED -->
+		<div id="tab2">
+			<h5 class="grey-text no-card center-align">No Rescuers Dispatched</h5>
 		</div>
 
-		<!-- SAVED TAB -->
-		<div id="tab3" class="center-align">
-			<h5 class="grey-text no-card">No Turtles Saved</h5>
+		<!-- TAB3: SAVED -->
+		<div id="tab3">
+			<h5 class="grey-text no-card center-align">No Turtles Saved</h5>
 		</div>
 
-		<!-- FLOATING BUTTONS -->
+		<!-- FLOATING ACTION BUTTON -->
 		<div id="report-button" class="fixed-action-btn hover-to-toggle">
 			<a id="button-link" class="btn-floating waves-effect waves-light pulse btn-large yellow darken-1 modal-trigger btn tooltipped" data-position="left" data-delay="50" data-tooltip="Send location" href="#location-modal"><i class="material-icons">add</i></a>
 			<ul>
