Adds Dispatch button to turtle cards.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -62,28 +62,17 @@
 			      <span id="number" class="card-title activator green-text"><i class="material-icons right">more_vert</i></span>
 			      <p id="reported"></p>
 			    </div>
-			    <div class="card-reveal">
-			      <span class="card-title green-text">Comment<i class="material-icons right">close</i></span>
-			      <p id="comment"></p>
-			    </div>
+					<div class="card sticky-action">
+						<div class="card-action right-align">
+							<button id="dispatch" class="card-button green btn-flat yellow-text waves-effect waves-light" type="button" name="button">Dispatch</button>
+						</div>
+					</div>
+					<div class="card-reveal">
+						<span class="card-title green-text">Comment<i class="material-icons right">close</i></span>
+						<p id="comment"></p>
+					</div>
 			  </div>
 			</div>
-			</div>
-
-			<!-- New Card (Work in Progress)-->
-			<!-- <div class="card col s12 m6">
-				<div class="card-image waves-effect waves-block waves-light">
-					<img class="activator" src="assets/images/swimming-turtle.jpg">
-				</div>
-				<div class="card-content">
-					<span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-					<p><a href="#">This is a link</a></p>
-				</div>
-				<div class="card-reveal">
-					<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-					<p>Here is some more information about this product that is only revealed once clicked on.</p>
-				</div>
-			</div> -->
 
 		</div>
 
