Adds function to move turtle card to dispatched tab.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -50,7 +50,7 @@
 
 		<!-- TAB1: REPORTED -->
 		<div id="tab1">
-			<h5 id="heading" class="grey-text no-card show center-align">No Turtles Reported</h5>
+			<h5 id="tab1-heading" class="grey-text no-card show center-align">No Turtles Reported</h5>
 
 			<!--TURTLE CARD-->
 			<div id="fullCard" class="col s12 m6">
@@ -64,7 +64,7 @@
 			    </div>
 					<div class="card sticky-action">
 						<div class="card-action right-align">
-							<button id="dispatch" class="card-button green btn-flat yellow-text waves-effect waves-light" type="button" name="button">Dispatch</button>
+							<button id="next-stage-btn" class="card-button green btn-flat yellow-text waves-effect waves-light" type="button" name="button">Done</button>
 						</div>
 					</div>
 					<div class="card-reveal">
@@ -78,12 +78,12 @@
 
 		<!-- TAB2: DISPATCHED -->
 		<div id="tab2">
-			<h5 class="grey-text no-card center-align">No Rescuers Dispatched</h5>
+			<h5 id="tab2-heading" class="grey-text no-card center-align">No Rescuers Dispatched</h5>
 		</div>
 
 		<!-- TAB3: SAVED -->
 		<div id="tab3">
-			<h5 class="grey-text no-card center-align">No Turtles Saved</h5>
+			<h5 id="tab3-heading" class="grey-text no-card center-align">No Turtles Saved</h5>
 		</div>
 
 		<!-- FLOATING ACTION BUTTON -->
