Adds counter media query.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -40,7 +40,7 @@
 			<ul id="tabs" class="tabs tabs-transparent">
 				<li class="tab"><a class="active" href="#tab1">Reported</a></li>
 				<li class="tab"><a href="#tab2">Dispatched</a></li>
-				<li class="tab"><a href="#tab3">Saved <span class="new badge yellow darken-1 green-text" data-badge-caption="">None</span></a></li>
+				<li class="tab"><a href="#tab3">Saved <span id="counter" class="new badge yellow darken-1 green-text" data-badge-caption="">0</span></a></li>
 			</ul>
 		</div>
 	</nav>
@@ -88,7 +88,7 @@
 
 		<!-- FLOATING ACTION BUTTON -->
 		<div id="report-button" class="fixed-action-btn hover-to-toggle">
-			<a id="button-link" class="btn-floating waves-effect waves-light pulse btn-large red lighten-1 modal-trigger btn tooltipped" data-position="left" data-delay="50" data-tooltip="Send location" href="#location-modal"><i class="material-icons">add</i></a>
+			<a id="button-link" class="btn-floating waves-effect waves-light pulse btn-large yellow darken-2 modal-trigger btn tooltipped" data-position="left" data-delay="50" data-tooltip="Send location" href="#location-modal"><i class="material-icons">add</i></a>
 			<ul>
 				<li><a class="btn-floating green waves-effect waves-light modal-trigger btn tooltipped" data-position="left" data-delay="50" data-tooltip="Send location with comments" href="#message-modal"><i class="material-icons">chat</i></a></li>
 				<li><a class="btn-floating blue waves-effect waves-light modal-trigger btn tooltipped" data-position="left" data-delay="50" data-tooltip="Call Rescue Center" href="#phone-modal"><i class="material-icons">phone</i></a></li>
