adds form validation and set Saved in database

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -107,7 +107,7 @@
 				<!-- FORM -->
 				<div class="row">
 					<div class="col s12">
-						<form id="reportNewTurtle-form">
+						<form id="reportNewTurtle-form" name="reportNewTurtle-form">
 
 							<!-- Hidden Input Fields -->
 							<input type="hidden" name="_subject" value="New Turtle Report">
