--- a/project-1/index.html
+++ b/project-1/index.html
@@ -151,7 +151,7 @@
 
 			<div class="modal-footer">
 				<a href="#!" class="modal-action waves-effect waves-black btn-flat modal-close">Cancel</a>
-				<button id="submit" class="btn green yellow-text waves-effect waves-light modal-close" type="submit" name="action">Submit</button>
+				<button id="submit" class="btn green yellow-text waves-effect waves-light" type="submit" name="action">Submit</button>
 			</div>
 
 		</div>
