Adds Help page.

--- a/project-1/help.html
+++ b/project-1/help.html
@@ -25,10 +25,10 @@
 			</ul>
 			<ul class="side-nav" id="mobile-nav">
 				<li><a class="waves-effect" href="index.html">Report Turtle</a></li>
-				<li><a href="patrol-instructions.html" class="waves-effect selected">Patrol Instructions</a></li>
+				<li><a href="patrol-instructions.html" class="waves-effect">Patrol Instructions</a></li>
 				<div class="divider">
 				</div>
-				<li><a class="small-link waves-effect" href="help.html"><i class="material-icons">help</i>Help</a></li>
+				<li><a class="small-link waves-effect selected" href="help.html"><i class="material-icons">help</i>Help</a></li>
 				<li><a href="http://www.turtlerescueleague.com/about" target="blank" class="small-link waves-effect"><i class="material-icons">link</i>About</a></li>
 				<div class="divider">
 				</div>
@@ -45,30 +45,30 @@
 	<div class="section grey lighten-4">
 
 		<div class="row container">
-			<h4 id="steps-header" class="green-text center-align">Patrol Instructions</h4>
-			<p class="brown-text text-darken-2">Keep your eyes on the water line when you are on patrol, and you will see stranded sea turtles in the surf as the tide is cresting. Do the following when you spot a beached turtle:</p>
+			<h4 id="steps-header" class="green-text center-align">Help</h4>
+			<p class="brown-text text-darken-2">To report your location, go to the <a href=index.html>Report Turtle</a> page. A list of recently reported sea turtles will be shown.</p>
 		</div>
 
-		<div id="steps" class="row container grey-text text-darken-2 center-align">
+		<div id="helpSteps" class="row container grey-text text-darken-2 center-align">
 
 			<div class="col s12 m3 center-align">
-				<i class="medium material-icons">arrow_upward</i>
-				<p>Move turtle above tide line</p>
-			</div>
-
-			<div class="col s12 m3 center-align">
-				<i class="medium material-icons">ac_unit</i>
-				<p>Cover turtle with seaweed to shelter from wind</p>
+				<i class="medium material-icons">add</i>
+				<p> To report a new turtle, hover your cursor over this floating button on the bottom-right of the page and a list of reporting options will appear</p>
 			</div>
 
 			<div class="col s12 m3 center-align">
 				<i class="medium material-icons">place</i>
-				<p>Mark spot with beach debris</p>
+				<p>Press this button to send your GPS coordinates to the Rescue Center</p>
 			</div>
 
 			<div class="col s12 m3 center-align">
-				<i class="medium material-icons">announcement</i>
-				<p>Report your location <a href="index.html">here</a></p>
+				<i class="medium material-icons">phone</i>
+				<p>Press this button to call the Resuce Center directly using your smartphone</p>
+			</div>
+
+			<div class="col s12 m3 center-align">
+				<i class="medium material-icons">chat</i>
+				<p>Press this button to send your GPS coordinates to the Resuce Center, along with your contact information and any additional comments</p>
 			</div>
 
 		</div>
