--- a/project-1/index.html
+++ b/project-1/index.html
@@ -22,7 +22,7 @@
 			<ul id="nav-top" class="right hide-on-med-and-down">
 				<li><a href="index.html">REPORT TURTLE</a></li>
 				<li><a href="patrol-instructions.html">PATROL INSTRUCTIONS</a></li>
-				<li><a href="#">HELP</a></li>
+				<li><a href="help.html">HELP</a></li>
 				<li><a href="http://www.turtlerescueleague.com/about" target="blank">ABOUT</a></li>
 			</ul>
 			<ul class="side-nav" id="mobile-nav">
@@ -30,7 +30,7 @@
 				<li><a href="patrol-instructions.html" class="waves-effect">Patrol Instructions</a></li>
 				<div class="divider">
 				</div>
-				<li><a class="small-link waves-effect" href="#"><i class="material-icons">help</i>Help</a></li>
+				<li><a class="small-link waves-effect" href="help.html"><i class="material-icons">help</i>Help</a></li>
 				<li><a href="http://www.turtlerescueleague.com/about" target="blank" class="small-link waves-effect"><i class="material-icons">link</i>About</a></li>
 				<div class="divider">
 				</div>
