Changes from Dispatched to In Progress and fixes turtle card prepend.

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -39,7 +39,7 @@
 		<div class="nav-content">
 			<ul id="tabs" class="tabs tabs-transparent">
 				<li class="tab"><a class="active" href="#tab1">Reported</a></li>
-				<li class="tab"><a href="#tab2">Dispatched</a></li>
+				<li class="tab"><a href="#tab2">In Progress</a></li>
 				<li class="tab"><a href="#tab3">Saved <span id="counter" class="new badge yellow darken-1 green-text" data-badge-caption="">0</span></a></li>
 			</ul>
 		</div>
@@ -76,9 +76,9 @@
 
 		</div>
 
-		<!-- TAB2: DISPATCHED -->
+		<!-- TAB2: IN PROGRESS -->
 		<div id="tab2">
-			<h5 id="tab2-heading" class="grey-text no-card center-align">No Rescuers Dispatched</h5>
+			<h5 id="tab2-heading" class="grey-text no-card center-align">No Rescues in Progress</h5>
 		</div>
 
 		<!-- TAB3: SAVED -->
