Improves Help page.

--- a/project-1/help.html
+++ b/project-1/help.html
@@ -46,29 +46,30 @@
 
 		<div class="row container">
 			<h4 id="steps-header" class="green-text center-align">Help</h4>
-			<p class="brown-text text-darken-2">To report your location, go to the <a href=index.html>Report Turtle</a> page. A list of recently reported sea turtles will be shown.</p>
+			<p class="brown-text text-darken-2">To report your location, go to the <a href=index.html>Report Turtle</a> page. A list of recently reported sea turtles will be shown. To report a new turtle, hover your cursor over the floating + button on the bottom-right, and a list of reporting options will appear.</p>
+			<p class="brown-text text-darken-2">Here are the buttons and their corresponding functions:</p>
 		</div>
 
 		<div id="helpSteps" class="row container grey-text text-darken-2 center-align">
 
 			<div class="col s12 m3 center-align">
 				<i class="medium material-icons">add</i>
-				<p> To report a new turtle, hover your cursor over this floating button on the bottom-right of the page and a list of reporting options will appear</p>
+				<p> Hover to see a list of reporting options</p>
 			</div>
 
 			<div class="col s12 m3 center-align">
 				<i class="medium material-icons">place</i>
-				<p>Press this button to send your GPS coordinates to the Rescue Center</p>
+				<p>Send your GPS coordinates to the Rescue Center</p>
 			</div>
 
 			<div class="col s12 m3 center-align">
 				<i class="medium material-icons">phone</i>
-				<p>Press this button to call the Resuce Center directly using your smartphone</p>
+				<p>Dial the Resuce Center directly using your smartphone</p>
 			</div>
 
 			<div class="col s12 m3 center-align">
 				<i class="medium material-icons">chat</i>
-				<p>Press this button to send your GPS coordinates to the Resuce Center, along with your contact information and any additional comments</p>
+				<p>Send your GPS coordinates to the Resuce Center with your contact information and additional comments</p>
 			</div>
 
 		</div>
