--- a/project-1/help.html
+++ b/project-1/help.html
@@ -24,12 +24,12 @@
 				<li><a href="http://www.turtlerescueleague.com/about" target="blank">ABOUT</a></li>
 			</ul>
 			<ul class="side-nav" id="mobile-nav">
-				<li><a class="waves-effect" href="index.html">Report Turtle</a></li>
-				<li><a href="patrol-instructions.html" class="waves-effect">Patrol Instructions</a></li>
+				<li><a class="waves-effect" href="index.html"><i class="material-icons">announcement</i>Report Turtle</a></li>
+				<li><a href="patrol-instructions.html" class="waves-effect"><i class="material-icons">info</i>Patrol Instructions</a></li>
 				<div class="divider">
 				</div>
 				<li><a class="small-link waves-effect selected" href="help.html"><i class="material-icons">help</i>Help</a></li>
-				<li><a href="http://www.turtlerescueleague.com/about" target="blank" class="small-link waves-effect"><i class="material-icons">link</i>About</a></li>
+				<li><a href="http://www.turtlerescueleague.com/about" target="blank" class="small-link waves-effect"><i class="material-icons">launch</i>About</a></li>
 				<div class="divider">
 				</div>
 			</ul>
