Simplified Help page.

--- a/project-1/help.html
+++ b/project-1/help.html
@@ -69,7 +69,7 @@
 
 			<div class="col s12 m3 center-align">
 				<i class="medium material-icons">chat</i>
-				<p>Send your GPS coordinates to the Resuce Center with your contact information and additional comments</p>
+				<p>Send your GPS coordinates to the Resuce Center with additional comments</p>
 			</div>
 
 		</div>
